# openrag

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  CNAME  CONTRIBUTING.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.langflow  Dockerfile.langflow.dev  Makefile  README.md  SECURITY.md  docker-compose-cpu.yml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  fix-opensearch-index.sh  index.html  jvector-demo-commands.sh  opensearch.xml  patch-netty.sh  pyproject.toml  robots.txt  sitemap.xml  warm_up_docling.py
.github/: changes-filter.yaml  dependabot.yml  labeler.yml  release.yml  semantic.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.md  documentation.yml  feature_request.yml
.github/workflows/: add-labels.yml  auto-delete-branch.yml  autofix.yml  build-multiarch.yml  codeql.yml  community-label.yml  conventional-labels.yml  dependency-audit.yml  deploy-docs-draft.yml  deploy-gh-pages.yml  docs-update-openapi.yml  labeler.yml  pr-checks.yml  publish-mcp.yml  publish-sdk-python.yml  publish-sdk-typescript.yml  test-integration.yml  update-uv-lock.yml
agents/: index.html
assets/css/: styles.29e42e49.css
assets/js/: 03ef5215.0f05b0ce.js  03ef5215.75c61c4c.js  03ef5215.7bf71c16.js  03ef5215.7da8ea5b.js  03ef5215.92b1a28d.js  03ef5215.c189f169.js  03ef5215.c65167a4.js  03ef5215.fb86efdd.js  0ba6a408.03a8f7d8.js  0ba6a408.35969427.js  0ba6a408.5aaf70c7.js  0ba6a408.7d52a913.js  0ba6a408.a6393793.js  0ba6a408.adb3ae8d.js  0ba6a408.bf3f8b5b.js  0ba6a408.daf8707e.js  0ba6a408.dd2959ac.js  0ba6a408.dd2bbad9.js  0ba6a408.e094a5ab.js  0ba6a408.e346183d.js  0ba6a408.ec0daa75.js  0ba6a408.eddb3e7e.js  0ba6a408.efa6fc46.js  0ba6a408.f2bd8a13.js  1000.f9af7a41.js  1203.b618bb61.js  165.7b1d067d.js  1741.b927934f.js  1746.1ce4b99b.js  1746.c8a2211b.js  17896441.0d444abe.js  17896441.afd63cb1.js  1a4e3797.f6ce627d.js  2130.09232a19.js  21afe7ac.1bd6088f.js  21afe7ac.25aea22f.js  21afe7ac.52236fad.js  21afe7ac.77cfeac1.js  (+401 more)
chat/: index.html
docker/: index.html
docs/: MCP.md  README.md  VERSIONING_SETUP.md  arch.md  docusaurus.config.js  package-lock.json  package.json  scraper.config.json  sidebars.js
files/: run_openrag_with_prereqs.sh
flows/: ingestion_flow.json  openrag_agent.json  openrag_nudges.json  openrag_url_mcp.json
frontend/: .prettierignore  .prettierrc  biome.json  components.json  knip.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
ingestion/: index.html
ingestion-configure/: index.html
install/: index.html
install-options/: index.html
install-uv/: index.html
install-uvx/: index.html
install-windows/: index.html
knowledge/: index.html
knowledge-browse/: index.html
knowledge-connectors/: index.html
knowledge-filters/: index.html
manage-services/: index.html
mcp-apps/: agent-settings-app.html  globals.css  knowledge-settings-app.html  model-providers-app.html  models-app.html  package-lock.json  package.json  settings-app.html  tailwind.config.ts  tsconfig.json  vite.config.ts
quickstart/: index.html
reinstall/: index.html
scripts/: clear_opensearch_data.py  create_opensearch_index.py  docling_ctl.py  extract_flow_component.py  migrate_embedding_model_field.py  run_openrag_with_prereqs.sh  update_flow_components.py  update_flow_components_with_langflow_api.py
sdks/mcp/: README.md  pyproject.toml
sdks/mcp/src/openrag_mcp/: __init__.py  __main__.py  config.py  server.py
sdks/mcp/src/openrag_mcp/tools/: __init__.py  chat.py  documents.py  registry.py  search.py  settings.py
sdks/python/: README.md  pyproject.toml
sdks/python/openrag_sdk/: __init__.py  chat.py  client.py  documents.py  knowledge_filters.py  models.py  search.py
sdks/python/tests/: __init__.py  test_integration.py
search/: index.html
src/: agent.py  api_key_middleware.py  auth_context.py  auth_middleware.py  main.py  session_manager.py
src/api/: auth.py  (+20 more)
tests/: conftest.py
tui/: index.html
uninstall/: index.html
upgrade/: index.html
(+475 files in other folders)
