[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrag"
version = "0.1.29"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentd>=0.2.2",
    "aiofiles>=24.1.0",
    "cryptography>=45.0.6",
    "docling[vlm]==2.41.0; sys_platform != 'darwin'",
    "docling[ocrmac,vlm]==2.41.0; sys_platform == 'darwin'",
    "google-api-python-client>=2.143.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "msal>=1.29.0",
    "httpx>=0.27.0",
    "opensearch-py[async]>=3.0.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.20",
    "starlette>=0.47.1",
    "torch>=2.7.1",
    "uvicorn>=0.35.0",
    "boto3>=1.35.0",
    "psutil>=7.0.0",
    "rich>=13.0.0",
    "textual>=0.45.0",
    "python-dotenv>=1.0.0",
    "textual-fspicker>=0.6.0",
    "structlog>=25.4.0",
    "docling-serve==1.5.0",
    "easyocr>=1.7.1"
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.21.0", "pytest-mock>=3.12.0", "pytest-cov>=4.0.0"]

[project.scripts]
openrag = "tui.main:run_tui"

[tool.uv]
package = true


[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name     = "pytorch-cu128"
url      = "https://download.pytorch.org/whl/cu128"
explicit = true
